--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "backend": "file:",
     "body-parser": "^1.20.3",
     "express": "^4.20.0",
+    "express-validator": "^7.2.0",
     "nodemon": "^3.1.4",
     "uuid": "^10.0.0"
   }
