--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.7.7",
     "backend": "file:",
     "body-parser": "^1.20.3",
+    "dotenv": "^16.4.5",
     "express": "^4.20.0",
     "express-validator": "^7.2.0",
+    "mongoose": "^8.6.2",
     "nodemon": "^3.1.4",
     "uuid": "^10.0.0"
   }
