--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 pass='BVmIXaUV1PhohktS'
 MONGO_URI='mongodb+srv://arvindkumar8960905167:BVmIXaUV1PhohktS@cluster0.calnj.mongodb.net/places?retryWrites=true&w=majority&appName=Cluster0'
+SECRET_KEY=mnswhyye73ye23ndidehneucsncygc
