--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express-validator": "^7.2.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.6.2",
+    "mongoose-unique-validator": "^5.0.1",
     "nodemon": "^3.1.4",
     "uuid": "^10.0.0"
   }
